# rubix-bios-legacy

./: CHANGELOG.md  README.md  pyproject.toml  run.py
.github/workflows/: docker-build-release.yml
docker/: .env  Dockerfile  README.md  startup.sh
src/: __init__.py  app.py  background.py  constants.py  restart_registry.py  routes.py  setting.py
src/bios/resources/: bios.py
src/exceptions/: exception.py
src/service/: systemd.py
src/service/models/: model_systemd.py  model_upgrade.py
src/service/resources/: control.py  release.py  service.py  token.py  update_check.py  upgrade.py
src/system/resources/: ping.py
src/system/utils/: file.py  shell.py
src/users/: model_users.py  resource_login_users.py  resource_users.py
src/utils/: shell.py  utils.py
systemd/: nubeio-rubix-bios.service  nubeio-rubix-service.service
