[tool.poetry]
name = "rubix-bios"
version = "1.0.0-rc.1"
description = "BIOS comes with default OS, non-upgradable"
authors = ["NubeIO"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
Flask-Cors = "^3.0.9"
click = "^7.1.2"
packaging = "^20.8"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
