[tool.poetry]
name = "rubix-bios-legacy"
version = "1.12.0"
description = "BIOS comes with default OS, non-upgradable"
authors = ["NubeIO"]

[tool.poetry.dependencies]
python = ">=3.6,<3.11"
requests = "^2.25.1"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
Flask-Cors = "^3.0.9"
click = "^7.1.2"
packaging = "^20.8"
PyJWT = "^2.0.1"
rubix-registry = { git = "https://github.com/NubeIO/rubix-registry", rev = "v1.1.1" }
gunicorn = "^20.0.4"
gevent = "^21.1.2"

[tool.poetry.dev-dependencies]
pyinstaller = "4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
